@@ -25,8 +25,11 @@ apport (0.100) UNRELEASED; urgency=low
   * apport/ui.py: Robostify cleanup of forked test processes.
   * apport/ui.py: Sleep for 0.5 seconds after creating the test process in the
     test suite to give /proc some time to settle down.
+  * bin/apport: Drop evaluation of CORE_* environment variables and mandate
+    calling with <pid> <signal> <core ulimit>. Drop the now obsolete
+    apport/elfcore.py. Adapt test-apport accordingly.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 21 Dec 2007 00:57:15 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 21 Dec 2007 02:09:50 +0100
 
 apport (0.99) hardy; urgency=low
 
